# simulation_rpg

./: .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
.github/workflows/: build.yaml
migrations/001_create_twitter_accounts/: down.sql  up.sql
src/: commands.rs  handler.rs  main.rs  util.rs
src/commands/: groups.rs  mod.rs
src/commands/misc/: mod.rs  ping.rs  stats.rs
src/commands/nerd/: apod.rs  mod.rs  xkcd.rs
src/commands/owner/: mod.rs  quit.rs
src/commands/twitter/: add.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: connect.rs  mod.rs  schema.rs
src/infrastructure/handlers/: event_handler.rs
src/infrastructure/models/: mod.rs
src/infrastructure/models/bot/: command_group.rs  mod.rs
src/infrastructure/models/twitter/: mod.rs  twitter_account.rs
src/infrastructure/util/: general.rs  mod.rs  nerd.rs
